최종 결과 완성 및 제출본

--- a/Samtarbucks_final.ipynb
+++ b/Samtarbucks_final.ipynb
@@ -7063,7 +7063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -7114,7 +7114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7458,7 +7458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7802,7 +7802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -7920,7 +7920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8268,7 +8268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -8537,7 +8537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -8594,7 +8594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -8645,7 +8645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -8989,7 +8989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9333,7 +9333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -9451,7 +9451,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9799,7 +9799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10068,7 +10068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10140,7 +10140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10188,7 +10188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -10357,11 +10357,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "O255APkEYg_n",
         "outputId": "7d0cb582-691b-4bc6-aad6-6a55d243df45"
@@ -10454,7 +10453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10633,7 +10632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10821,11 +10820,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "qLwUeHe5di4H",
         "outputId": "3528c65e-965f-41a5-e672-10cad87f9ded"
@@ -10991,11 +10989,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wOIgGThOdjzE",
         "outputId": "bab0d9e0-0f17-45a3-e3ab-7499cdbdb074"
@@ -11126,11 +11123,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Qr1CAPG0d1QQ",
         "outputId": "96752879-3760-43fc-aa48-be14bef649e9"
@@ -11258,7 +11254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -11379,11 +11375,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "iZ7dO0kQalfU",
         "outputId": "3508573f-7d9f-48e3-8e73-b8d775c68363"
@@ -11482,11 +11477,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ksTacZWjdt5E",
         "outputId": "5c472e11-d4e1-4c05-ff61-9830ffb536e9"
@@ -11579,11 +11573,13 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [
+        "JPZfNsLAWdPG",
         "L0V4HwCmX3Cs",
         "AqRHBJs_WfNq",
+        "lph20mqJY11m",
         "LuFvGjHVsd-u",
-        "2BkiKPVZZwm1",
         "LDlBVfy8XvtQ",
+        "AEduGArJap0C",
         "PlkbghqKZfTE",
         "-NDMgRqsatqn",
         "SrF4nsbyc3ye",
